2005-02-17  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/session.py:
	Fixed poor stats reference.

2005-02-16  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/jabw.py:
	Changed unicode handling some.

	* src/disco.py:
	* src/tlib/oscar.py:
	Added test for readiness.

	* src/stats.py:
	* src/main.py:
	* src/session.py:
	* src/legacy/icqt.py:
	* src/webadmin/handler.py:
	Switched to new stats handler.

	* src/webadmin/handler.py:
	Passwords are now hidden.

2005-02-15  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/jabw.py:
	Added unicode conversion.

2005-02-10  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/debug.py:
	* src/main.py:
	* src/config.py:
	Added extended debugging support.

2005-02-04  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/disco.py:
	Imported part of Florian's version patch.

2005-02-03  Daniel Henninger  <jadestorm@nc.rr.com>

	* PyICQt:
	Changed to /bin/sh.
	Then changed to /usr/bin/env.

	* src/config.py:
	* src/legacy/icqt.py:
	* config_example.xml:
	Added icqServer and icqPort config setting.

2005-02-02  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/glue.py:
	* src/legacy/icqt.py:
	* src/tlib/oscar.py:
	Added Jonas's SSI patches.

2005-01-18  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/config.py:
	* config_example.xml:
	Added encoding which vanished on me for some reason.

	* src/tlib/oscar.py:
	Check for seqnum existance.

	* src/legacy/icqt.py:
	Added more checks for "bos".
	Fixed lack of readiness check.

	* src/lang.py:
	* src/session.py:
	* src/register.py:
	* src/utils.py:
	* src/misciq.py:
	* src/main.py:
	* src/groupchat.py:
	Changed case of lang strings.

2005-01-14  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/webadmin/handler.py:
	Added authentication support thanks to one of the folk in twisted.web.
	Switched shut down button to form-driven and to not generate errors.

2005-01-11  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/icqt.py:
	* src/tlib/oscar.py: